fix: remove x axis overflow

--- a/public/styles/global.css
+++ b/public/styles/global.css
@@ -1,5 +1,6 @@
 body {
     width: 100%;
+    overflow-x: hidden;
     min-height: 100vh;
     background: #fcf7d9;
 }
